--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -45,6 +45,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,10 +70,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\RegistryHelper.cs" />
     <Compile Include="Messages\NewRDCConnectionMessage.cs" />
+    <Compile Include="Models\IFileAccess.cs" />
     <Compile Include="Models\IRDCStarter.cs" />
     <Compile Include="Models\RDCConnection.cs" />
     <Compile Include="Models\RDCStarter.cs" />
+    <Compile Include="Models\XmlFileAccess.cs" />
     <Compile Include="ViewModels\NewRDCConnectionViewModel.cs" />
     <Compile Include="ViewModels\RDCListViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
@@ -114,7 +119,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Assets\TrayIcon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Resource Include="Assets\WindowIcon.png" />
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Views\NewRDCConnectionView.xaml">
       <SubType>Designer</SubType>
