Send stop message

--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -123,6 +123,7 @@
     </Compile>
     <Compile Include="Converters\BooleanToVisiblityConverter.cs" />
     <Compile Include="Messages\RDCSelectedMessage.cs" />
+    <Compile Include="Messages\StopRDCMessage.cs" />
     <Compile Include="Models\IFileAccess.cs" />
     <Compile Include="Models\IRDCInstanceManager.cs" />
     <Compile Include="Models\RDC.cs" />
