--- a/Source/RDCManager/packages.config
+++ b/Source/RDCManager/packages.config
@@ -4,4 +4,5 @@
   <package id="Caliburn.Micro.Core" version="3.2.0" targetFramework="net452" userInstalled="true" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
 </packages>
