--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -137,12 +137,14 @@
     <Compile Include="Models\EncryptionManager.cs" />
     <Compile Include="Models\IEncryptionManager.cs" />
     <Compile Include="Models\IFileAccess.cs" />
+    <Compile Include="Models\IRDCGroupManager.cs" />
     <Compile Include="Models\IRDCInstanceManager.cs" />
     <Compile Include="Models\IRDCWindow.cs" />
     <Compile Include="Models\IUserAccountManager.cs" />
     <Compile Include="Models\JsonFileAccess.cs" />
     <Compile Include="Models\RDC.cs" />
     <Compile Include="Models\RDCGroup.cs" />
+    <Compile Include="Models\RDCGroupManager.cs" />
     <Compile Include="Models\RDCInstanceManager.cs" />
     <Compile Include="Models\RDCModel.cs" />
     <Compile Include="Models\UserAccount.cs" />
