--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -131,7 +131,9 @@
     <Compile Include="Controls\RDCWinForm.Designer.cs">
       <DependentUpon>RDCWinForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BooleanNotToVisiblityConverter.cs" />
     <Compile Include="Converters\BooleanToVisiblityConverter.cs" />
+    <Compile Include="Converters\NullToVisiblityConverter.cs" />
     <Compile Include="Messages\RDCSelectedMessage.cs" />
     <Compile Include="Messages\StopRDCMessage.cs" />
     <Compile Include="Models\EncryptionManager.cs" />
