--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -133,6 +133,7 @@
     </Compile>
     <Compile Include="Converters\BooleanNotToVisiblityConverter.cs" />
     <Compile Include="Converters\BooleanToVisiblityConverter.cs" />
+    <Compile Include="Converters\GroupIdConverter.cs" />
     <Compile Include="Converters\NullToVisiblityConverter.cs" />
     <Compile Include="Messages\RDCSelectedMessage.cs" />
     <Compile Include="Messages\StopRDCMessage.cs" />
