--- a/Source/RDCManager/RDCManager.csproj
+++ b/Source/RDCManager/RDCManager.csproj
@@ -133,10 +133,11 @@
     </Compile>
     <Compile Include="Converters\BooleanNotToVisiblityConverter.cs" />
     <Compile Include="Converters\BooleanToVisiblityConverter.cs" />
-    <Compile Include="Converters\GroupIdConverter.cs" />
+    <Compile Include="Converters\GroupIdToNameConverter.cs" />
     <Compile Include="Converters\NullToVisiblityConverter.cs" />
     <Compile Include="Messages\RDCSelectedMessage.cs" />
     <Compile Include="Messages\StopRDCMessage.cs" />
+    <Compile Include="Messages\SwitchViewMessage.cs" />
     <Compile Include="Models\ApplicationWrapper.cs" />
     <Compile Include="Models\EncryptionManager.cs" />
     <Compile Include="Models\IApplicationWrapper.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="Models\RDCModel.cs" />
     <Compile Include="Models\UserAccount.cs" />
     <Compile Include="Models\UserAccountManager.cs" />
+    <Compile Include="Models\View.cs" />
     <Compile Include="ViewModels\RDCCollectionViewModel.cs" />
     <Compile Include="ViewModels\RDCGroupsViewModel.cs" />
     <Compile Include="ViewModels\RDCSessionViewModel.cs" />
